--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "components/MoviesPage.jsx"  ],
   "exclude": [
     "node_modules"
   ]
